--- a/5. Share.md
+++ b/5. Share.md
@@ -5,7 +5,8 @@ In dieser Phase werde ich die Ergebnisse der Kundensegmentierung und Analyse so 
 ## Visualisierungen und Interpretation der Ergebnisse
 
 ### 1. Anzahl von Kunden in jedem Segment 
-@Bild
+
+<img width="996" alt="Anzahl von Kunden in jedem Segment" src="https://github.com/user-attachments/assets/386686a3-1da4-4bdd-b21f-69894ece1d94" />
 
 **Ergebnis:**
 - At Risk: 2.922 Kunden
@@ -20,7 +21,7 @@ Das Segment At Risk enthält die meisten Kunden, was zeigt, dass viele Kunden in
 Champions bilden ein kleineres, aber wertvolles Segment – sie sollten priorisiert und gepflegt werden.
 
 ### 2. Umsatzverteilung nach Segmenten
-@Bild
+<img width="996" alt="Umsatzverteilung nach Segmenten" src="https://github.com/user-attachments/assets/211df4da-8178-45ff-b643-883f9d3177b1" />
 
 **Ergebnis:**
 - Champions: 933 Mio.
@@ -35,7 +36,7 @@ Champions sind mit Abstand die wertvollste Gruppe, da sie den höchsten Gesamtum
 Trotz der hohen Anzahl an Kunden im Segment At Risk ist deren Umsatz signifikant niedriger als der der Champions.
 
 ### 3. Durchschnittlicher Umsatz pro Kunde je Segment
-@Bild
+<img width="996" alt="Durchschnittlicher Umsatz pro Segment" src="https://github.com/user-attachments/assets/576fe16a-6add-4235-9b93-69b4d51df323" />
 
 **Ergebnis:**
 * Champions: 850.000 €
@@ -50,7 +51,8 @@ Der durchschnittliche Umsatz pro Kunde bestätigt die Bedeutung von Champions, d
 Kunden im Segment Potential Loyalists haben großes Potenzial, wenn ihre Aktivität gesteigert wird.
 
 ### 4. Umsatztrend über die Zeit
-@Bild
+<img width="996" alt="Umsatzverteilung nach Segmenten" src="https://github.com/user-attachments/assets/d75e81bb-e432-484d-b634-689855b27956" />
+
 
 **Ergebnis:**
 
@@ -64,7 +66,8 @@ Die saisonalen Muster (z. B. im Weihnachtsgeschäft) können genutzt werden, um 
 At Risk-Kunden könnten durch Reaktivierungskampagnen in Q2 und Q3 zurückgewonnen werden.
 
 ### 5. Durchschnittliche Tage seit dem letzten Kauf je Segment
-@Bild
+<img width="996" alt="Durchschnittliche Tage seit dem letzten Kauf je Segment" src="https://github.com/user-attachments/assets/17f66dd7-b31e-46f9-8071-0a6aac6380f2" />
+
 
 **Ergebnis:**
 
@@ -78,7 +81,8 @@ Kunden im Segment At Risk benötigen gezielte Maßnahmen, um sie zurückzugewinn
 Champions zeigen stabile Kaufmuster und sollten weiterhin durch gezielte Angebote und Treueprogramme gefördert werden.
 
 ### 6. Top-Produkte nach Segment
-@Bild
+<img width="996" alt="Top Produkte nach Segment" src="https://github.com/user-attachments/assets/298ead4d-1203-44b0-86d0-2ae1544f7de5" />
+
 
 **Ergebnis:**
 
@@ -91,9 +95,12 @@ Diese Produkte können gezielt in Marketingkampagnen eingesetzt werden, besonder
 Die Produktpräferenzen der Segmente liefern wertvolle Informationen für personalisierte Angebote.
 
 ### Zusammenfassung der Erkenntnisse:
-Champions sind die wertvollste Gruppe und tragen den höchsten Umsatz bei. Sie sollten durch Treueprogramme und Premium-Angebote gepflegt werden.
+<img width="996" alt="Dashboard" src="https://github.com/user-attachments/assets/f45a59ee-fd81-4015-b52a-224557a4ba5f" />
 
-Das Segment At Risk ist die größte Gruppe. Es besteht eine große Chance, diese Kunden durch Reaktivierungskampagnen zurückzugewinnen.
 
-Potential Loyalists zeigen viel Potenzial, wenn ihre Kaufhäufigkeit gesteigert wird.
+- Champions sind die wertvollste Gruppe und tragen den höchsten Umsatz bei. Sie sollten durch Treueprogramme und Premium-Angebote gepflegt werden.
+
+- Das Segment At Risk ist die größte Gruppe. Es besteht eine große Chance, diese Kunden durch Reaktivierungskampagnen zurückzugewinnen.
+
+- Potential Loyalists zeigen viel Potenzial, wenn ihre Kaufhäufigkeit gesteigert wird.
 Die saisonalen Trends in Q3 und Q4 bieten Gelegenheiten für gezielte Kampagnen, insbesondere für wertvolle Segmente.
